--- a/src/5addConditionModal.css
+++ b/src/5addConditionModal.css
@@ -71,7 +71,6 @@
   
   .modal-button-group {
     display: flex;
-    justify-content: space-between;
     margin-top: 20px;
   }
 
